recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:21: error: not found: value snowSide
		snowSide(levels-1, lengths);
                ^SquareKoch:23: error: not found: value snowSide
		snowSide(levels-1, lengths);
                ^SquareKoch:25: error: not found: value snowSide
		snowSide(levels-1, lengths);
                ^SquareKoch:27: error: not found: value snowSide
		snowSide(levels-1, lengths);
                ^